Adding a few missed posts

--- a/_posts/2012-04-15-mvc-r.md
+++ b/_posts/2012-04-15-mvc-r.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: MVC-r The pattern you already use
-tags: [Test, Is this cool?]
+tags: [Programming]
 ---
 
 *The pattern you already use*
