Cleaning up tags

--- a/source/posts/2013-10-28-udacity-cs212.md
+++ b/source/posts/2013-10-28-udacity-cs212.md
@@ -1,5 +1,6 @@
 ---
 title: Udacity CS-212
+tags: Programming, Education, Python
 ---
 
 Peter Norvig is a big name in computer programming. I stumbled across some of
