Posts should use h3 or smaller

--- a/source/posts/2012-04-15-mvc-r.md
+++ b/source/posts/2012-04-15-mvc-r.md
@@ -7,8 +7,7 @@ tags: Programming
 
 MVC has long been the defacto standard for building web and desktop applications. There are many variations on the theme, but I think the acronym is missing one component that is already an important part of any MVC application...
 
-Resources
--------------
+### Resources
 
 Call them assets, static files or whatever. A large portion of every application is the stuff that never changes. The reason it's missing from the acronym is most likely that developers want to differentiate dynamic code from immutable resources. The real work happens in the code, whereas resources are dumb entities; not really the concern of our smart code.
 
